--- a/src/sass/core/body.scss
+++ b/src/sass/core/body.scss
@@ -15,8 +15,6 @@ html {
 }
 
 body {
-	overflow-x: hidden;
-	overflow-y: scroll;
 	background-color: white;
 	line-height: 1;
 	font-size: $font-size;
@@ -26,14 +24,14 @@ body {
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
 	color: $text-color;
-
-	// Firefox only
-	scroll-behavior: smooth;
 }
 
 .scrollable {
 	overflow-x: hidden;
 	overflow-y: scroll;
+
+	// Firefox only
+	scroll-behavior: smooth;
 }
 
 .scroll-lock {
@@ -71,4 +69,17 @@ body {
 #footer {
 	position: relative;
 	z-index: 2;
+}
+
+body.fixed-header {
+	margin-top: $header-ht;
+
+	#header {
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: unset;
+		left: 0;
+		z-index: 3;
+	}
 }
