--- a/src/sass/modules/navs.scss
+++ b/src/sass/modules/navs.scss
@@ -4,19 +4,18 @@
 |––––––––––––––––––––––––––––––––––––––––––––––––––
 */
 
-nav.site-nav {
+.nav {
 	display: flex;
 	flex-flow: row wrap;
 	margin: -0.5em;
 
-    a {
+    &__link {
         display: block;
 		padding: 0.5em;
 		line-height: 1;
 		letter-spacing: 2px;
 		font-family: $link-font;
-		font-weight: bold;
         text-transform: uppercase;
-        color: $text-color;
+        color: inherit;
     }
 }
