--- a/src/sass/core/body.scss
+++ b/src/sass/core/body.scss
@@ -16,6 +16,7 @@ html {
 
 body {
 	overflow-x: hidden;
+	overflow-y: scroll;
 	background-color: white;
 	line-height: 1;
 	font-size: $font-size;
@@ -25,32 +26,18 @@ body {
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
 	color: $text-color;
-}
-
-.scrollable {
-	overflow-x: hidden;
-	overflow-y: scroll;
 
 	// Firefox only
 	scroll-behavior: smooth;
 }
 
-.scroll-lock {
-	overflow: hidden !important;
+.scrollable {
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
-.viewbox {
-	display: flex;
-	flex-flow: column nowrap;
-	width: 100vw;
-	height: 100vh;
-
-	& > .viewable {
-		flex: 1;
-		width: 100%;
-		max-width: 100vw;
-		height: auto;
-	}
+.scroll-lock {
+	overflow: hidden !important;
 }
 
 #root {
@@ -72,15 +59,26 @@ body {
 	z-index: 2;
 }
 
-body.fixed-header {
-	margin-top: $header-ht;
+.viewbox {
+	display: flex;
+	flex-flow: column nowrap;
+	width: 100vw;
+	height: 100vh;
 
-	#header {
-		position: fixed;
-		top: 0;
-		right: 0;
-		bottom: unset;
-		left: 0;
-		z-index: 3;
+	& > .viewable {
+		flex: 1;
+		width: 100%;
+		max-width: 100vw;
+		height: auto;
+	}
+}
+
+#header.fixed-header {
+	position: fixed;
+	top: 0;
+	width: 100vw;
+
+	& + .viewbox {
+		margin-top: $header-ht;
 	}
 }
