added modal and did other clean up

--- a/src/sass/core/settings.scss
+++ b/src/sass/core/settings.scss
@@ -234,6 +234,4 @@ $space-8:           3.2rem; // ~ 64px
 $round:             2px;
 
 /* === HEADER === */
-$header-pad:        1rem;
-$header-logo-ht:    2rem;
-$header-ht:         $header-pad * 2 + $header-logo-ht;
+$header-ht:         4rem;
