--- a/src/sass/core/body.scss
+++ b/src/sass/core/body.scss
@@ -40,25 +40,6 @@ body {
 	overflow: hidden !important;
 }
 
-#root {
-	position: static;
-}
-
-#header {
-	position: relative;
-	z-index: 3;
-}
-
-#main {
-	position: relative;
-	z-index: 1;
-}
-
-#footer {
-	position: relative;
-	z-index: 2;
-}
-
 .viewbox {
 	display: flex;
 	flex-flow: column nowrap;
@@ -73,12 +54,35 @@ body {
 	}
 }
 
-#header.fixed-header {
-	position: fixed;
-	top: 0;
-	width: 100vw;
+#root {
+	position: static;
+}
 
-	& + .viewbox {
-		margin-top: $header-ht;
+#header {
+	position: relative;
+	z-index: 3;
+
+	.modal--active & {
+		z-index: 1;
 	}
+	
+	&.fixed-header {
+		position: fixed;
+		top: 0;
+		width: 100vw;
+	
+		& + .viewbox {
+			margin-top: $header-ht;
+		}
+	}
+}
+
+#main {
+	position: relative;
+	z-index: 2;
+}
+
+#footer {
+	position: relative;
+	z-index: 1;
 }
