Cleaning up nav functionality

--- a/src/sass/core/body.scss
+++ b/src/sass/core/body.scss
@@ -43,8 +43,9 @@ body {
 .viewbox {
 	display: flex;
 	flex-flow: column nowrap;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	max-width: 100vw;
+	min-height: 100vh;
 
 	& > .viewable {
 		flex: 1;
